--- a/Nuro/Base/Info.plist
+++ b/Nuro/Base/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>VisbyRoundCF-Bold.otf</string>
+		<string>VisbyRoundCF-DemiBold.otf</string>
+		<string>VisbyRoundCF-ExtraBold.otf</string>
+		<string>VisbyRoundCF-ExtraLight.otf</string>
+		<string>VisbyRoundCF-Heavy.otf</string>
+		<string>VisbyRoundCF-Light.otf</string>
+		<string>VisbyRoundCF-Medium.otf</string>
+		<string>VisbyRoundCF-Regular.otf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
