--- a/Nuro/Base/Info.plist
+++ b/Nuro/Base/Info.plist
@@ -32,6 +32,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 </dict>
